Fixed with of text to fix alignment issues. https://tracker.nci.nih.gov/browse/OCEPROJECT-2654

--- a/CancerGov/_src/StyleSheets/_topicPages.scss
+++ b/CancerGov/_src/StyleSheets/_topicPages.scss
@@ -21,7 +21,7 @@ div.cc-main-pages div.title-red-arrow {
 }
 
 .landing-thumb-text {
-	width: 72%;
+	width: 70%;
 	padding-left: 1.25em;
 	display: inline-block;
 	vertical-align: top;
